# alloy

./: .clangd  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
benchmarks/: __init__.py
benchmarks/assets/: README.md
examples/kernel/: blur.py  elementwise.py  flash_attention.py  histogram.py  mandelbrot.py  matmul.py  nbody.py  softmax.py  vector_add.py
examples/torch/: finetune_lora.py  mlp.py  resnet.py  train_lm.py  train_mlp.py  train_transformer.py  transformer.py
installer/: build-tarball.sh  install.sh
packaging/: CMakeLists.txt  README.md  pyproject.toml
scripts/: bump_version.py
tests/: conftest.py  grad_helpers.py  helpers.py
tests/architecture/: test_attention_kv_rewrite.py
tests/compiler/: test_codegen.py  test_dispatch_spec.py  test_fusion_analysis.py  test_fusion_transforms.py  test_tile_ir.py  test_tile_opt.py  test_tile_plan.py  test_trace.py  test_trace_address_snapshots.py  test_trace_ast_rewrite.py
tests/integration/: test_alloy_cli.py  test_buffer.py  test_cache.py  test_column_slice_epilogue.py  test_fusion.py  test_fusion_blocklist.py  test_fusion_extras.py  test_generation_runtime.py  test_grad_models.py  test_grad_modules.py  test_grad_ops.py  test_grad_training.py  test_kv_paged.py  test_lazy.py  test_openai_server.py  test_smoke.py  test_speculative.py  test_torch_backend.py
tests/integration/anthropic_compat/: conftest.py  test_messages.py
tests/integration/embeddings/: test_embeddings.py
tests/integration/ollama_compat/: conftest.py  test_endpoints.py
tests/integration/server/: test_cli_wiring.py  test_port_collision.py
tests/kernels/: test_attention.py  test_conv.py  test_delta_net.py  test_dot.py  test_dtypes.py  test_elementwise.py  test_kv_quant.py  test_moe.py  test_quant_q4k_native.py  test_reductions.py  test_rope_half_cos.py  test_sampling.py  test_threadgroup.py
tests/repros/: test_broadcast_add_epilogue.py
tests/serve/: test_dialects.py  test_server_helpers.py  test_transport.py
tests/serve/golden/: capture_wire_golden.py  harness.py  test_wire_golden.py  wire_golden.json
